Added page shots

--- a/client/src/pages/Post/Post.css
+++ b/client/src/pages/Post/Post.css
@@ -191,5 +191,7 @@ em{
     text-transform: uppercase;
 }
 @media(max-width: 700px){
-
+    #Post .Post .content img{
+        width: 60%;
+    }
 }
