--- a/client/src/pages/Blog/Blog.css
+++ b/client/src/pages/Blog/Blog.css
@@ -8,24 +8,28 @@
 }
 /*BLOG PAGE*/
 #Blog .sec-1{
-  width: 100%;
-  min-height: 55vh;
   background:
-  url("https://images.pexels.com/photos/707582/pexels-photo-707582.jpeg?auto=compress&cs=tinysrgb&w=600");
+  url("https://media.istockphoto.com/id/471082863/photo/gentle-water-surface.jpg?s=612x612&w=0&k=20&c=B0dKkjjb5xTbwkHPjtrjthosGi_dOpayJTT0998C9A0=");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  display: flex;
-  align-items: flex-end;
+  width: 100%;
 }
-#Blog .sec-1 div{
-  width: 40%;
-  height: 100%;
-  margin-bottom: 3%;
-  margin-left: 2%;
+#Blog .sec-1i{
   display: flex;
-  flex-direction: column;
-  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  min-height: 55vh;
+}
+#Blog nav, #Blog nav a, #Blog #displaY, #Blog .logo{
+  color: var(--color-6);
+}
+#Blog nav{
+  font-size: 1.2rem;
+}
+#Blog .sec-li p{
+  font-size: 2.5rem;
 }
 #Blog .sec-1 .big-bold{
   text-transform: capitalize;
@@ -63,34 +67,60 @@
   margin-bottom: 10px;
 }
 #Single{
-  width: 90%;
+  width: 80%;
   margin: auto;
   color: var(--color-1);
   margin-bottom: 10px;
-  min-height: 420px;
+  height: fit-content;
+  text-transform: capitalize;
+  box-shadow: 0px 0px 7px 4px rgba(0, 0, 0, 0.3);
+  padding-bottom: 15px;
+}
+#Single .content{
+  width: 90%;
+  margin: auto;
+}
+#Single .bc{
+  border-top: 1px solid var(--color-4);
+  margin-top: 5px;
+  padding-top: 3px;
+}
+#Single .tell{
+  font-size: 0.8rem;
+  display: flex;
+  gap: 10px;
+  text-transform: lowercase;
+  margin-bottom: 10px;
+}
+#Single .tell span{
   text-transform: capitalize;
 }
-#Single .button{
-  font-weight: bold;
-  transition: 0.6s;
-  cursor: pointer;
-}
-#Single .button:hover{
-  background-color: var(--color-1);
-  color: var(--color-6);
-  border-color: var(--color-1);
-}
-#Single img{
+#Single .blogImg{
   width: 100%;
-  border-radius: 10px;
+  height: 270px;
 }
 #Single .topic{
   font-size: 1.3rem;
   font-weight: bold;
   margin-bottom: 10px;
 }
+#Single .icon{
+  width: 17px;
+  height: 17px;
+}
+#Single .com{
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  font-size: 1.1rem;
+  background-color: rgb(224, 222, 222);
+  width: fit-content;
+  margin-left: auto;
+  padding: 5px;
+  border-radius: 5px;
+}
 #Single .about{
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   margin-bottom: 10px;
 }
 #Blog .sec-2 .right{
@@ -107,6 +137,7 @@
   width: 70%;
   padding: 3px;
   margin: 30px auto;
+  margin-top: 0;
 }
 #Blog .sec-2 .right .search input{
   width: 95%;
@@ -130,17 +161,24 @@
 #Tops img{
   width: 100px;
 }
-#Blog .sec-2 .right .socials{
+#Blog .categories{
   display: flex;
-  gap: 15px;
-  margin-top: 20px;
+  justify-content: center;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin: 10px 0;
 }
-#Blog .sec-2 .right .socials .icon{
-  width: 35px;
-  height: 35px;
-  cursor: pointer;
+#Blog .categories p{
+  border-radius: 20px;
+  padding: 7px 15px;
+  background-color: white;
+  color: rgb(175, 172, 172);
+  transition: 0.5s;
 }
 
+#Blog .categories .selected{
+  background-color: var(--color-5);
+}
 @media(max-width: 700px){
   #big-scr{
     display: none;
@@ -148,14 +186,11 @@
     height: 0vh;
     margin-bottom: 20px;
   }
-  #Blog .sec-1{
+  #Blog .sec-1i{
     min-height: 30vh;
   }
-  #Blog .sec-1 div{
-    width: 50%;
-  }
   #Blog .sec-1 .big-bold{
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
   #Blog .sec-2{
     display: flex;
@@ -167,14 +202,14 @@
   }
   #Blog .sec-2 .left .grided{
     grid-template-columns: 1fr;
-    grid-gap: 5px;
+    grid-gap: 10px;
   }
   #Single{
     width: 95%;
     margin-bottom: 10px;
-    min-height: 350px;
     border-bottom: 1px solid var(--color-4);
   }
+ 
   #Blog .sec-2 .right{
     width: 95%;
   }
@@ -190,12 +225,17 @@
   #Tops{
     display: flex;
   }
-  #Blog .sec-2 .right .socials{
-    gap: 7px;
-    justify-content: center;
-  }
-  #Blog .sec-2 .right .socials .icon{
-    width: 30px;
-    height: 30px;
+  
+  #Single .blogImg{
+    height: 200px;
   } 
+}
+#CLEAR{
+  background-color: rgb(88, 2, 2);
+  padding: 5px;
+  border: none;
+  color: white;
+  font-size: 1.1rem;
+  font-weight: bold;
+  cursor: pointer;
 }
