--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,11 @@
 :root {
-  --color-1: #03045e;
-  --color-2: #0077b6;
-  --color-3: #00b4d8;
-  --color-4: #90e0ef;
-  --color-5: #caf0f8;
-  --color-6: #f6fff8;
+  --color-1: #000000;
+  --color-2: #1a1a1a;
+  --color-3: #333333;
+  --color-4: #4d4d4d;
+  --color-5: #808080;
+  --color-6: #ffffff;
+  --color-7: #dcdada;
 }
 *{
   margin: 0;
@@ -19,6 +20,7 @@ body{
   background-color: var(--color-6);
   width: 100vw;
   overflow-x: hidden;
+  font-family: Arial, Helvetica, sans-serif;
 }
 a{
   text-decoration: none;
@@ -30,7 +32,7 @@ input:focus, textarea:focus {
 }
 .logo{
   font-family: 'Lobster', cursive;
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: bold;
   color: var(--color-1);
 }
@@ -58,7 +60,8 @@ nav{
   justify-content: space-between;
   align-items: center;
   padding: 10px 30px;
-  width: 100vw;
+  width: 90vw;
+  margin: auto;
 }
 nav div{
   display: flex;
@@ -88,7 +91,109 @@ nav .button:hover{
   border-radius: 100%;
 }
 
-@media(max-width: 700px){
+footer{
+  background-color: var(--color-2);
+  color: var(--color-7);
+  padding: 30px 0;
+  padding-bottom: 50px;
+}
+.footer{
+  display: flex;
+  width: 95%;
+  margin: auto;
+  gap: 10px;
+}
+.footer .left{
+  width: 75%;
+}
+.footer .naming{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.footer .logo{
+  font-size: 2rem;
+  color: var(--color-7);
+}
+.footer .big-bold{
+  font-size: 1.5rem;
+  color: var(--color-7);
+}
+.footer .tired{
+  font-size: 1.1rem;
+  margin: 10px 0;
+}
+.footer h3{
+  color: var(--color-7);
+  margin-bottom: 10px;
+}
+.footer ul{
+  list-style: none;
+  margin-left: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+}
+.footer li:first-child, .footer li:nth-child(2){
+  margin-top: 10px;
+  border-top: 1px solid var(--color-5);
+}
+.footer li{
+  cursor: pointer;
+  padding: 5px;
+  border-bottom: 1px solid var(--color-5);
+}
+.footer b{
+  font-size: 1.2rem;
+  text-decoration: underline;
+}
+.footer .reason{
+  margin-top: 5px;
+  font-weight: 500;
+  font-style: italic;
+}
+.footer .content{
+  margin-top: 10px;
+  font-size: 0.9rem;
+}
+
+footer .socials{
+  display: flex;
+  gap: 5px;
+  margin-top: 15px;
+}
+footer .socials .icon{
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+}
+.footer .right{
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 30px;
+  font-size: 1.1rem;
+}
+.footer .links{
+  font-style: italic;
+  text-decoration: underline;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.footer .copyright{
+  line-height: 1.5em;
+}
+.footer .links p:hover{
+  cursor: pointer;
+  transition: ease-in-out 0.5s;
+  font-size: larger;
+  margin: 5px 0;
+}
+@media(max-width: 900px){
 
   /*GLOBALS*/
   .logo{
@@ -142,5 +247,46 @@ nav .button:hover{
   .profile .icon{
     border-radius: 100%;
   }
-  
+  .footer{
+    display: flex;
+    flex-direction: column;
+  }
+  .footer .left{
+    width: 100%;
+  }
+  .footer .big-bold{
+    margin: 15px 0;
+  }
+  .footer .tired{
+    font-size: 1.2rem;
+    margin: 15px 0;
+  }
+  .footer .content{
+    font-size: 1rem;
+  }
+  .footer .right{
+    width: 100%;
+    gap: 40px;
+  }
+  .footer .right span{
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+  .footer .links{
+    font-style: italic;
+    text-decoration: underline;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .footer .copyright{
+    line-height: 1.5em;
+  }
+  .footer .links p:hover{
+    cursor: pointer;
+    transition: ease-in-out 0.5s;
+    font-size: larger;
+    margin: 5px 0;
+  }
 }
